Tests refactored according to CompletableFuture approach